--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "node node_modules/eslint/bin/eslint.js **/*.jsx"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
